# gfx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gfxConfig.cmake  gfxConfig.cmake.in
doc/: CMakeLists.txt
examples/: CMakeLists.txt
examples/00_hello/: CMakeLists.txt  example.vs  hello.cpp
examples/geometry_shader/: CMakeLists.txt  example.fs  example.gs  example.vs  geometry_shader.cpp
examples/imgui/: CMakeLists.txt  example.fs  imgui.cpp  scene.cpp  scene.hpp  scene.vs  shaders.h
examples/textures/: CMakeLists.txt  textures.cpp
examples/uniforms/: CMakeLists.txt  example.fs  example.vs  uniforms.cpp
include/gfx/: bind_group.hpp  bindable.hpp  buffer.hpp  camera.hpp  debug_draw.hpp  font_awesome.hpp  framebuffer.hpp  gfx.hpp  glad.h  log.hpp  render_pass.hpp  render_pipeline.hpp  render_surface.hpp  sampler.hpp  shader_program.hpp  texture.hpp  texture_binding.hpp  type_info.hpp  uniform.hpp  vertex_array.hpp
include/gfx/imgui/: gfx.hpp  imconfig.h  imfilebrowser.h  imgui_freetype.h  imgui_internal.h
src/: buffer.cpp  camera.cpp  debug_draw.cpp  font_awesome.cpp  font_awesome_2.cpp  font_lato.cpp  font_roboto.cpp  framebuffer.cpp  gfx.cpp  glad.c  render_pass.cpp  render_pipeline.cpp  render_surface.cpp  sampler.cpp  shader_program.cpp  texture.cpp  texture_binding.cpp  uniform.cpp  vertex_array.cpp
src/fonts/: font_awesome.cpp  font_awesome.hpp  font_lato.cpp  font_lato.hpp
src/imgui/: gfx.cpp  imfilebrowser.cpp  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_freetype.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h
src/imgui_freetype/: imgui_freetype.cpp  imgui_freetype.h
src/private/: font_roboto.hpp  pixel_storage.hpp
